--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="profession">
+                        <i class="bi bi-laptop"></i>
                         <span>Web Developer</span>
                     </div>
                 </div>
